<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/backg">

        <TextView
            style="@style/first"
            android:gravity="center_horizontal"
            android:text="@string/PlayerA" />

        <EditText
            android:id="@+id/playerA"
            style="@style/first"
            android:hint="@string/hint" />

        <TextView
            style="@style/first"
            android:gravity="center_horizontal"
            android:text="@string/PlayerB" />

        <EditText
            android:id="@+id/playerB"
            style="@style/first"
            android:hint="@string/hint" />

        <Button
            android:id="@+id/send"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <TextView
            android:id="@+id/check"
            style="@style/details"
            android:text="@string/rules" />

    </LinearLayout>

